@@ -60,6 +60,7 @@ This is a backwards-incompatible release.
  * Created `Carbon_Privilege` resource for configuring and identity's privileges.
  * Created `Carbon_Permission` resource for configuring file, directory, and registry permissions.
  * Created `Carbon_Service` resource for configuring Windows services.
+ * Created `Carbon_Script` resource for running custom PowerShell scripts, with support for passing arguments.
  
 ### File System
 
